--- a/libft/Makefile
+++ b/libft/Makefile
@@ -31,7 +31,7 @@ CFLAGS = -Wall -Wextra -Werror
 
 all: $(NAME)
 
-$(NAME): $(OBJECTS)
+$(NAME): $(OBJECTS) $(BOBJECTS)
 	$(AR) -r $@ $?
 
 bonus: $(OBJECTS) $(BOBJECTS)
